# playfair-design

./: .gitignore  Cargo.toml  README.md
assets/fonts/: lucide-codepoints.txt
src/: borders.rs  elevation.rs  icons.rs  lib.rs  prelude.rs  spacing.rs  theme.rs  typography.rs
src/colors/: mod.rs  primitives.rs  semantic.rs
src/styles/: button.rs  checkbox.rs  container.rs  mod.rs  pick_list.rs  progress_bar.rs  radio.rs  scrollable.rs  slider.rs  text.rs  text_input.rs  toggler.rs
src/styles/aw/: badge.rs  card.rs  mod.rs  number_input.rs  tab_bar.rs
src/typography/: scale.rs  weights.rs
stub/: Cargo.toml
stub/src/: borders.rs  elevation.rs  icons.rs  lib.rs  prelude.rs  spacing.rs  theme.rs  typography.rs  widgets.rs
stub/src/colors/: mod.rs  primitives.rs  semantic.rs
stub/src/styles/: button.rs  checkbox.rs  container.rs  mod.rs  pick_list.rs  progress_bar.rs  radio.rs  scrollable.rs  slider.rs  text.rs  text_input.rs  toggler.rs
stub/src/styles/aw/: badge.rs  card.rs  mod.rs  number_input.rs  tab_bar.rs
stub/src/typography/: scale.rs  weights.rs
